--- a/cw15/BlogPlatform/Blogapp/templates/basic.html
+++ b/cw15/BlogPlatform/Blogapp/templates/basic.html
@@ -18,10 +18,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="/home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Post </a>
+              <a class="nav-link" href="/home/post">Post </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Category</a>
@@ -32,7 +32,12 @@
           </ul>
         </div>
       </nav>
+      {% block welcome %}
+      {% endblock %}
     
+
+      {% block posts %}
+      {% endblock %}
 </body>
 </html>
 
