modify name of the files

--- a/cw15/BlogPlatform/Blogapp/templates/basic.html
+++ b/cw15/BlogPlatform/Blogapp/templates/basic.html
@@ -32,11 +32,7 @@
           </ul>
         </div>
       </nav>
-      {% block welcome %}
-      {% endblock %}
-    
-
-      {% block posts %}
+      {% block content %}
       {% endblock %}
 </body>
 </html>
