--- a/cw15/BlogPlatform/Blogapp/templates/home.html
+++ b/cw15/BlogPlatform/Blogapp/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'basic.html' %}
 
 
-{% block welcome %}
+{% block content %}
 <header class="bg-dark py-5">
     <div class="container-md px-5">
         <div class="row gx-5 justify-content-center">
@@ -13,4 +13,4 @@
         </div>
 </div>
 </header>
-{% endblock welcome %}
+{% endblock %}
