--- a/cw15/BlogPlatform/Blogapp/templates/post_list.html
+++ b/cw15/BlogPlatform/Blogapp/templates/post_list.html
@@ -1,6 +1,6 @@
 {% extends 'basic.html' %}
 
-{% block posts %}
+{% block content %}
     <div class="container">
         <h1 class="mb-4">All Posts</h1>
         <div class="row">
