--- a/cw15/BlogPlatform/Blogapp/templates/author_list.html
+++ b/cw15/BlogPlatform/Blogapp/templates/author_list.html
@@ -8,8 +8,7 @@
                 <div class="col-md-6">
                     <div class="card mb-3">
                         <div class="card-body">
-                            <h5 class="card-title"><a href="{% url 'author_details' author.pk %}">{{ post.title }}</a></h5>
-                            <p class="card-text">Author: {{ author.name }}</p>
+                            <h5 class="card-title"><a href="{% url 'author_details' author.pk %}">{{ author.name }}</a></h5>
                         </div>
                     </div>
                 </div>
