--- a/cw15/BlogPlatform/Blogapp/templates/basic.html
+++ b/cw15/BlogPlatform/Blogapp/templates/basic.html
@@ -18,16 +18,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="/home">Home</a>
+              <a class="nav-link" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/home/post">Post </a>
+              <a class="nav-link" href="{% url 'post' %}">Post </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Category</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Author</a>
+              <a class="nav-link" href="{% url 'author' %}">Author</a>
             </li>
           </ul>
         </div>
