--- a/cw15/BlogPlatform/Blogapp/templates/post_list.html
+++ b/cw15/BlogPlatform/Blogapp/templates/post_list.html
@@ -8,7 +8,7 @@
                 <div class="col-md-6">
                     <div class="card mb-3">
                         <div class="card-body">
-                            <h5 class="card-title"><a href="{% url 'post_details' post.pk %}">View Details">{{ post.title }}</a></h5>
+                            <h5 class="card-title"><a href="{% url 'post_details' post.pk %}">{{ post.title }}</a></h5>
                             <p class="card-text">Author: {{ post.author }}</p>
                             <p class="card-text">Publication Date: {{ post.publication_date }}</p>
                         </div>
