--- a/cw15/BlogPlatform/Blogapp/templates/basic.html
+++ b/cw15/BlogPlatform/Blogapp/templates/basic.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Blog Platform</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Blog Platform</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,7 +24,7 @@
               <a class="nav-link" href="{% url 'post' %}">Post </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Category</a>
+              <a class="nav-link" href="{% url 'category' %}">Category</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'author' %}">Author</a>
